--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@
                                         <i class="fas fa-user-check"></i>
                                     </div>
                                     <h3 class="text-2xl font-bold mb-3">وسطاء معتمدين</h3>
-                                    <p class="mb-4">تعامل مع وسطاء عقاريين محترفين ومعتمدين من وزارة الإسكان بضمان المنصة</p>
+                                    <p class="mb-4">تعامل مع وسطاء عقاريين محترفين ومعتمدين من الهيئة العامة للعقار المنصة</p>
                                     <button id="certifiedBrokersBtn" class="bg-white text-success hover:bg-opacity-90 px-4 py-2 rounded-lg font-bold transition duration-300">تصفح الوسطاء</button>
                                 </div>
                             </div>
